--- a/src/components/CardElectricPage.css
+++ b/src/components/CardElectricPage.css
@@ -10,13 +10,13 @@
 }
 
 
-.e-card__img {
+.e-cardimg {
   width: 42%;
   height: 100%;
   background: #222;
 }
 
-.e-card__img img {
+.e-cardimg img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -34,7 +34,7 @@
 }
 
 
-.e-card__body {
+.e-cardbody {
   flex: 1;
   padding: 18px 20px;
   color: white;
@@ -43,19 +43,19 @@
   justify-content: center;
 }
 
-.e-card__title {
+.e-cardtitle {
   margin: 0 0 10px 0;
   font-size: 20px;
 }
 
-.e-card__list {
+.e-cardlist {
   margin: 0;
   padding-left: 18px;
   line-height: 1.8;
   font-size: 14px;
 }
 
-.e-card__coming {
+.e-cardcoming {
   margin: 0;
   opacity: 0.85;
 }
