--- a/src/components/CardElectricPage.css
+++ b/src/components/CardElectricPage.css
@@ -4,19 +4,19 @@
   overflow: hidden;
   display: flex;
   width: 100%;
-  max-width: 950px; 
-  height: 230px;    
+  max-width: 950px;
+  height: 230px;
   border: 1px solid rgba(255, 255, 255, 0.25);
 }
 
 
-.e-cardimg {
+.e-card__img {
   width: 42%;
   height: 100%;
   background: #222;
 }
 
-.e-cardimg img {
+.e-card__img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -34,7 +34,7 @@
 }
 
 
-.e-cardbody {
+.e-card__body {
   flex: 1;
   padding: 18px 20px;
   color: white;
@@ -43,19 +43,19 @@
   justify-content: center;
 }
 
-.e-cardtitle {
+.e-card__title {
   margin: 0 0 10px 0;
   font-size: 20px;
 }
 
-.e-cardlist {
+.e-card__list {
   margin: 0;
   padding-left: 18px;
   line-height: 1.8;
   font-size: 14px;
 }
 
-.e-cardcoming {
+.e-card__coming {
   margin: 0;
   opacity: 0.85;
 }
@@ -66,6 +66,7 @@
     flex-direction: column;
     height: auto;
   }
+
   .e-card__img {
     width: 100%;
     height: 220px;
